# capitalism

./: .cocos-project.json  .gitignore  CMakeLists.txt  README.md  codestyle.xml
Classes/: AppDelegate.cpp  AppDelegate.h  CMakeLists.txt
Classes/Base/: CMakeLists.txt  Loader.cpp  Loader.h  LoaderWorld.cpp  LoaderWorld.h  Manager.h  ManagerWorld.cpp  ManagerWorld.h  View.h  ViewWorld.cpp  ViewWorld.h
Classes/Controller/: BuildingController.cpp  BuildingController.h  CMakeLists.txt  FactoryCells.cpp  FactoryCells.h  KeyboardController.cpp  KeyboardController.h  LoaderConfig.h  LoaderMap.cpp  LoaderMap.h  TileImageManager.cpp  TileImageManager.h
Classes/Controller/Loader/: CMakeLists.txt  LoaderConfig.cpp  LoaderMap.cpp  LoaderMap.h  LoaderMapObject.cpp  LoaderMapObject.h  LoaderSpriteSheets.h  SpritesHeetLoader.cpp
Classes/Controller/Map/: CMakeLists.txt  FactoryCells.cpp  FactoryCells.h
Classes/Loader/: CMakeLists.txt  LoaderConfig.cpp  LoaderConfig.h  LoaderSpriteSheets.cpp  LoaderSpriteSheets.h
Classes/Loader/Map/: CMakeLists.txt  LoaderCompany.cpp  LoaderCompany.h  LoaderHousehold.cpp  LoaderHousehold.h  LoaderMap.cpp  LoaderMap.h  LoaderMapObject.cpp  LoaderMapObject.h  LoaderTypeBuildings.cpp  LoaderTypeBuildings.h
Classes/Manager/: BuildingTypeManager.cpp  BuildingTypeManager.h  CMakeLists.txt
Classes/Manager/Map/: BuildingManager.cpp  BuildingManager.h  CMakeLists.txt  LayerManager.cpp  LayerManager.h
Classes/Model/: CMakeLists.txt  Camera.cpp  Camera.h  Cell.cpp  Cell.h  Config.cpp  Config.h  IsoPoint.cpp  IsoPoint.h  MapCity.cpp  MapCity.h  MapObject.cpp
Classes/Model/Cells/: ParkCell.h  RailRoadCell.h  RoadCell.cpp  RoadCell.h
Classes/Model/Map/: CMakeLists.txt  Camera.h  Cell.cpp  Cell.h  FactoryCells.cpp  GroupObject.cpp  GroupObject.h  IsoPoint.h  MapCity.cpp  MapCity.h  MapObject.cpp  MapObject.h  Types.h  TypesCell.h  World.cpp  World.h
Classes/Model/Map/Building/: Building.cpp  Building.h  CMakeLists.txt  TypeBuilding.cpp  TypeBuilding.h
Classes/Model/Map/Cell/: CMakeLists.txt  Cell.cpp  Cell.h  ParkCell.cpp  ParkCell.h  RailRoadCell.cpp  RailRoadCell.h  RoadCell.cpp  RoadCell.h  RouteCell.cpp  RouteCell.h  TypesCell.cpp
Classes/Model/Map/Cells/: CMakeLists.txt  ParkCell.cpp  ParkCell.h  RailRoadCell.cpp  RailRoadCell.h  RoadCell.cpp  RoadCell.h
Classes/Model/Map/World/: CMakeLists.txt  GroupObject.cpp  GroupObject.h  MapCity.cpp  MapCity.h  World.cpp  World.h
Classes/Scene/: CMakeLists.txt  GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h
Classes/Simulation/: Agent.cpp  Agent.h  CMakeLists.txt  Message.h  SimulationManager.cpp  SimulationManager.h
Classes/Simulation/Agents/: BuildingAgent.cpp  BuildingAgent.h  CMakeLists.txt  Company.cpp  Company.h  Household.cpp  Household.h
Classes/Simulation/Agents/Building/: BuildingAgent.cpp  BuildingAgent.h  CMakeLists.txt
Classes/Simulation/Agents/Market/: CMakeLists.txt  HouseholdMarket.cpp  HouseholdMarket.h  Market.cpp  Market.h
Classes/Simulation/Managers/: AgentsManager.cpp  AgentsManager.h  BuildingAManager.cpp  BuildingAManager.h  BuildingManager.h  CMakeLists.txt  CompaniesManager.cpp  CompaniesManager.h  HouseholdManager.cpp  HouseholdManager.h
Classes/Tools/: FactoryCells.cpp  FactoryCells.h  ImageManager.cpp  ImageManager.h  Scroller.cpp  Scroller.h  TileImageManager.h
Classes/Ui/: Button.h
Classes/View/: CMakeLists.txt  IsoScroller.cpp  IsoScroller.h  Scroller.cpp  Scroller.h  ViewManager.cpp  ViewManager.h
Classes/View/Ui/: Buildings.cpp  Buildings.h  Button.cpp  Button.h  CMakeLists.txt  ItemBuilding.cpp  ItemBuilding.h  SpritesHeetLoader.h
Classes/View/Ui/buildings/: Buildings.cpp  Buildings.h  Button.cpp  Button.h  CMakeLists.txt  ItemBuilding.cpp  ItemBuilding.h
Classes/tools/: CMakeLists.txt  ConvertingImgMapToTMX.cpp  ConvertingImgMapToTMX.h  CutOriginalAtlas.cpp  CutOriginalAtlas.h  IsoTools.cpp  IsoTools.h  СutOriginalAtlas.cpp  СutOriginalAtlas.h
Resources/configs/: households.xml  sprites.xml  strings.xml  typebuildings.xml  types_building.xml  types_property_item.xml  typetiles.xml
Resources/images/: tiles.plist
Resources/images/Tiles/: cityset.xml
Resources/maps/: kaliningrad.xml  moscow.xml  omsc.xml  test.xml
Resources/ui/SpriteSheet/: graySheet.xml  greenSheet.xml  orangeSheet.xml  redSheet.xml  yellowSheet.xml
cocos2d/cocos/2d/: CCSprite.cpp  CCSpriteFrame.cpp  CCSpriteFrame.h
cocos2d/cocos/base/: ccConfig.h
proj.android/: .cproject  .project  AndroidManifest.xml  build.xml
proj.android-studio/: settings.gradle
proj.android-studio/app/: AndroidManifest.xml  build.gradle
proj.android-studio/app/res/values/: strings.xml
proj.android/res/values/: strings.xml
proj.ios_mac/capitalism.xcodeproj/: project.pbxproj
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
proj.linux/: main.cpp
proj.tizen/: .project  tizen-manifest.xml
proj.win10/: capitalism.sln
proj.win10/App/: Package.appxmanifest  capitalism.vcxproj  capitalism.vcxproj.filters
proj.win32/: capitalism.sln
src/: main.cpp
