CMAKE_POLICY(SET CMP0017 NEW)

CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

ADD_SUBDIRECTORY("Base")
ADD_SUBDIRECTORY("Controller")
ADD_SUBDIRECTORY("Loader")
ADD_SUBDIRECTORY("Manager")
ADD_SUBDIRECTORY("Model")
ADD_SUBDIRECTORY("Scene")
ADD_SUBDIRECTORY("Simulation")
ADD_SUBDIRECTORY("tools")
ADD_SUBDIRECTORY("View")

SET(GAME_SRC ${GAME_SRC}
	Classes/AppDelegate.cpp
	PARENT_SCOPE)

SET(GAME_HEADERS ${GAME_HEADERS}
	Classes/AppDelegate.h
	PARENT_SCOPE)
